file(GLOB SRCS *.cpp)
file(GLOB MAINCPP arbiter_main.cpp)
list(REMOVE_ITEM SRCS ${MAINCPP})
add_library(arbiter STATIC ${SRCS})
target_include_directories(arbiter PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_link_libraries(arbiter libchess-core)
target_link_libraries(arbiter libchess-uci)

add_executable(chessarbiter ${MAINCPP})
target_link_libraries(chessarbiter arbiter)
target_link_libraries(chessarbiter boost_program_options)
